# TeachExamples

./: CMakeLists.txt  README.md  build.sh
Algorithms/: CMakeLists.txt  main.cpp  sort.cpp  sort.h
Bitwise/: CMakeLists.txt  main.cpp
DynStructures/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  Data.cpp  Data.h  DoubleLinkedList.cpp  DoubleLinkedList.h  List.cpp  List.h  Queue.cpp  Queue.h  SingleLinkedList.cpp  SingleLinkedList.h  Stack.cpp  Stack.h  main.cpp
Exceptions/: CMakeLists.txt  SmartPtr.h  Stack.h  main.cpp
Hello/: CMakeLists.txt  main.cpp
PackedStructures/: CMakeLists.txt  main.cpp
Pancakes/: BaseOrders.cpp  BaseOrders.h  CMakeLists.txt  Discount.cpp  Discount.h  IOrder.h  Suppliments.cpp  Suppliments.h  main.cpp
PointersReferences/: ArrayUtils.cpp  ArrayUtils.h  CMakeLists.txt  Distance.cpp  Distance.h  main.cpp
Shapes/: CMakeLists.txt  ConsoleGraphics.cpp  ConsoleGraphics.h  HtmlGraphics.cpp  HtmlGraphics.h  IGraphics.h  IShape.h  Scene.cpp  Scene.h  Shapes.cpp  Shapes.h  main.cpp
SmartPtrs/: CMakeLists.txt  Student.h  main.cpp
Streams/: CMakeLists.txt  Employee.cpp  Employee.h  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp
Structures/: CMakeLists.txt  main.cpp
WeatherStation/: CMakeLists.txt  GeneralWidget.cpp  GeneralWidget.h  IObserver.h  StatisticsWidget.cpp  StatisticsWidget.h  WeatherStation.cpp  WeatherStation.h  main.cpp
advance/: Animals.h  CMakeLists.txt  Employee.cpp  Employee.h  Graphics.cpp  Graphics.h  HtmlGraphics.cpp  HtmlGraphics.h  Person.cpp  Person.h  Shape.cpp  Shape.h  String.cpp  String.h  Student.cpp  (+2 more)
(+29 files in other folders)
