cmake_minimum_required (VERSION 2.8)
project (Examples)

set (CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")

add_subdirectory (advance)
add_subdirectory (Bitwise)
add_subdirectory (DynStructures)
add_subdirectory (Exceptions)
add_subdirectory (Hello)
add_subdirectory (oop)
add_subdirectory (PackedStructures)
add_subdirectory (Pancakes)
add_subdirectory (Shapes)
add_subdirectory (Streams)
add_subdirectory (templates)
add_subdirectory (WeatherStation)
